--- a/views/booking_items_management.erb
+++ b/views/booking_items_management.erb
@@ -99,26 +99,26 @@
 <!-- Renders one element in the elements list view -->
         
 <script type="text/tmpl" id="elements_list_template">
-    <tr class="table-row" id="element_row_<%%=index%>" <%%if (!entity.active){%>style="color:#BBB"<%%}%>>
-      <td class="table-cell element-navigation-detail" rel="<%%= index %>">
+    <tr class="table-row element-navigation-detail" id="element_row_<%%=index%>" rel="<%%= index %>" <%%if (!entity.active){%>style="color:#BBB"<%%}%>>
+      <td class="table-cell">
          <%%= entity.category_code %>
       </td>
-      <td class="table-cell element-navigation-detail" rel="<%%= index %>">
+      <td class="table-cell">
          <strong><%%= entity.reference %></strong>
       </td>
-      <td class="table-cell element-navigation-detail" rel="<%%= index %>">
+      <td class="table-cell">
          <%%= entity.name %>
       </td>
-      <td class="table-cell element-navigation-detail" rel="<%%= index %>">
+      <td class="table-cell">
          <%%= entity.stock_model %>
       </td>
-      <td class="table-cell element-navigation-detail" rel="<%%= index %>">
+      <td class="table-cell">
          <%%= entity.stock_plate %>
       </td>
-      <td class="table-cell element-navigation-detail centered_text" rel="<%%= index %>">
+      <td class="table-cell centered_text">
          <%%= entity.own_property ? '<i class="fa fa-check"></i>' : '<i class="fa fa-times"></i>' %>
       </td>
-      <td class="table-cell element-navigation-detail centered_text" rel="<%%= index %>">
+      <td class="table-cell centered_text">
          <%%= entity.assignable ? '<i class="fa fa-check"></i>' : '<i class="fa fa-times"></i>'  %>
       </td>
       <td class="table-cell">
