--- a/views/bookings_planning.erb
+++ b/views/bookings_planning.erb
@@ -72,7 +72,7 @@
 </style>
 <div class="top-navigation-bar">
   <div class="row">
-    <div class="col-xs-2 col-md-4 col-lg-3">
+    <div class="col-xs-2 col-md-4 <% if @pending_of_asignation_bookings.size > 0 && @conflicts.size > 0%>col-lg-2<%else%>col-lg-3<%end%>">
       <h2 class="entity-title" style="position:relative; top: 2px"><%=t.bookings_planning.title%></h2>
     </div>
     <div class="col-xs-8 col-md-6 col-lg-6">
@@ -89,7 +89,7 @@
         </div>
       </form>
     </div>
-    <div class="col-xs-2 col-md-2 col-lg-3 pull-right">
+    <div class="col-xs-2 col-md-2 <% if @pending_of_asignation_bookings.size > 0 && @conflicts.size > 0%>col-lg-4<%else%>col-lg-3<%end%> pull-right">
       <% if @pending_of_asignation_bookings.size > 0 %>
         <button id="pending_asignation_button" class="btn btn-minw btn-primary pull-right" style="margin-left: 10px">Pendientes<span style="background: red; padding: 2px 7px; border-radius: 50%; position: relative; top: -9px; left: 1px; color: white; text-decoration: none; font-size: 0.7em"><%=@pending_of_asignation_bookings.size%></span></button>
       <% end %>
